<resources>
    <string name="lab2">lab2</string>
    <string-array name="currency_codes">
        <item>RUB</item>
        <item>AUD</item>
        <item>AZN</item>
        <item>AMD</item>
        <item>BGN</item>
        <item>BRL</item>
        <item>BYN</item>
        <item>CAD</item>
        <item>CHF</item>
        <item>CNY</item>
        <item>CZK</item>
        <item>DKK</item>
        <item>EGP</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>GEL</item>
        <item>HKD</item>
        <item>HUF</item>
        <item>IDR</item>
        <item>INR</item>
        <item>JPY</item>
        <item>KRW</item>
        <item>KZT</item>
        <item>MDL</item>
        <item>NOK</item>
        <item>NZD</item>
        <item>PLN</item>
        <item>RON</item>
        <item>SEK</item>
        <item>SGD</item>
        <item>THB</item>
        <item>TRY</item>
        <item>UAH</item>
        <item>USD</item>
        <item>ZAR</item>
    </string-array>
</resources>